@@ -8,6 +8,9 @@ Changes - Apache::Test change logfile
 
 =item 1.12-dev
 
+add skip_reason() to Apache::Test, which provides a mechanism for
+user-specified skip messages [Geoffrey Young]
+
 =item 1.11 - May 21, 2004
 
 Tweak Apache::TestRun to support test filenames starting with
